--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>kallaspriit.github.io</h1>
+<ul>
+	<li>
+		<a href="http://kallaspriit.github.io/rapp">RAPP - Minimalistic ES6 React application framework</a>
+	</li>
+</ul>
