--- a/rapp/index.html
+++ b/rapp/index.html
@@ -13,7 +13,7 @@
 <body>
 <div id="app"></div>
 
-<script type="text/javascript" src="/app.js"></script>
+<script type="text/javascript" src="/rapp/app.js"></script>
 
 </body>
 </html>
