--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
-<h1>kallaspriit.github.io</h1>
-<ul>
-	<li>
-		<a href="http://kallaspriit.github.io/rapp">RAPP - Minimalistic ES6 React application framework</a>
-	</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>RAPP</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script>window.debug = false;</script>
+
+	
+	<link href="gfx/app.css" rel="stylesheet">
+	
+</head>
+<body>
+<div id="app"></div>
+
+<script type="text/javascript" src="/app.js"></script>
+
+</body>
+</html>
